syntax = "proto3";

option csharp_namespace = "LambdaService";

package myservice;

// The greeting service definition.
service MyService {
  // Sends a greeting
  rpc GetData (MyRequest) returns (MyReply);
}

// The request message containing the user's name.
message MyRequest {
  string name = 1;
}

// The response message containing the greetings.
message MyReply {
  string message = 1;
}
